--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a href="index.html" class="logo">The Kveik Project</a>
 					<nav id="nav">
 						<a href="http://www.jbmbrewlab.cz"><img src="images/small_logo.png"></a>
 					</nav>
@@ -27,11 +28,6 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Introspect: <span>A free + fully responsive<br />
-					site template by TEMPLATED</span></h1>
-					<ul class="actions">
-						<li><a href="#" class="button alt">Get Started</a></li>
-					</ul>
 				</div>
 			</section>
 
@@ -39,7 +35,7 @@
 			<section id="one">
 				<div class="inner">
 					<header>
-						<h2>Magna Etiam Lorem</h2>
+						<h2>Kveik a farmarske pivovary</h2>
 					</header>
 					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
 					<ul class="actions">
@@ -121,28 +117,8 @@
 		<!-- Footer -->
 			<section id="footer">
 				<div class="inner">
-					<header>
-						<h2>Get in Touch</h2>
-					</header>
-					<form method="post" action="#">
-						<div class="field half first">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input type="text" name="email" id="email" />
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="6"></textarea>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="alt" /></li>
-						</ul>
-					</form>
 					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>
+						Otazky, pripomienky? Napiste nam na kveik@jbmbrewlab.cz. <br>  &copy; 2018 JBM Brew Lab, Marek Mahut. Header picture by <a href="https://www.brewingnordic.com/">Mika Laitinen</a>.
 					</div>
 				</div>
 			</section>
